--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,7 +2,7 @@
 <resources>
     <color name="colorPrimary">#02b9a8</color>
     <color name="colorPrimaryDark">#007271</color>
-    <color name="colorAccent">#FF4081</color>
+    <color name="colorAccent">#848484</color>
     <color name="colorWhite">#ffffff</color>
     <color name="colorGrey">#aeaeae</color>
     <color name="colorBlack70">#464646</color>
