--- a/app/src/main/res/layout/activity_biodata.xml
+++ b/app/src/main/res/layout/activity_biodata.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -120,7 +119,7 @@
             android:fontFamily="sans-serif-medium"
             android:gravity="center"
             android:hint="@string/zip_code"
-            android:inputType="text"
+            android:inputType="number"
             android:padding="6dp"
             android:textColor="@color/colorBlack70"
             android:textColorHint="@color/colorGrey" />
